# jkps-gl

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  jkps-sample.js  jkps-sample.wasm
include/: blitter.h  framebuffer.h  gltfModel.h  material.h  mesh.h  meshNode.h  model.h  nodeList.h  particleSystem.h  primitives.h  resourceManager.h  swapchain.h  texture.h  transform.h
sample/: CMakeLists.txt  app.cpp  app.h  controls.cpp  controls.h  main.cpp
sample/resources/models/fat/: fat-character.gltf
sample/resources/models/venus_de_milo/: scene.gltf
sample/resources/shaders/: compose.fs  compose.vs  screen.vs  sprayParticle.vs  standard.fs  standard.vs
sample/resources/shaders/spray/: particle.fs  particle.vs  pos-vel.fs  pos.fs  vel.fs
sample/shaders/: standard.fs  standard.vs
sample/wasm/: index.html
src/: blitter.cpp  framebuffer.cpp  framebuffer.h  geometry.cpp  geometry.h  gltfModel.cpp  gltfModel.h  material.cpp  material.h  mesh.cpp  mesh.h  meshNode.cpp  model.cpp  particleSystem.cpp  primitives.cpp  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  swapchain.cpp  texture.cpp  texture.h  transform.cpp
